feat: Add $if and $coalesce expressions for conditional logic and skip handling
- Add If variant to ValueExpr for conditional expressions: { $if: condition, then: expr, else?: expr }
- Add Coalesce variant to ValueExpr: { $coalesce: [expr1, expr2, ...] }
- Implement serde for both new expression types
- Implement resolution logic in value_resolver
- If: Evaluate condition (treating Skipped as falsy), return then/else branch accordingly
- Coalesce: Try expressions in order, return first non-null, non-skipped result
- Updated skip test workflows to use $coalesce for handling skipped steps
- Fixed skipIf field to use old Expr syntax ($from) until migration is complete
- Added validation/dependency support for $if and $coalesce in ValueExpr
- All 6 skip test cases now passing

The skip handling now works with the new expression system:
- Use skipIf with old syntax: { $from: { workflow: input }, path: field }
- Use $coalesce in new ValueExpr inputs: { $coalesce: [step_ref, fallback] }

--- a/tests/mock/conditional_skip.yaml
+++ b/tests/mock/conditional_skip.yaml
@@ -19,7 +19,8 @@ steps:
   inputSchema: null
   outputSchema: null
   skipIf:
-    $input: shouldSkip
+    $from: { workflow: input }
+    path: shouldSkip
   input:
     input:
       $input: value
@@ -29,8 +30,9 @@ steps:
   outputSchema: null
   input:
     input:
-      $step: conditional_step
-      path: output
+      $coalesce:
+        - { $step: conditional_step, path: output }
+        - null
 output:
   dependentResult:
     $step: dependent_step
