--- a/tests/mock/must_execute_skip_if.yaml
+++ b/tests/mock/must_execute_skip_if.yaml
@@ -23,7 +23,8 @@ steps:
   component: /mock/error
   mustExecute: true
   skipIf:
-    $input: shouldSkip
+    $from: { workflow: input }
+    path: shouldSkip
   input:
     mode: error
 - id: output_step
