--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -27,20 +27,40 @@ fastrace-opentelemetry = "0.14"
 futures = "0.3.31"
 glob = "0.3"
 log = "0.4"
-logforth = { version = "0.28", features = ["layout-json", "layout-text", "bridge-log", "diagnostic-fastrace", "append-file", "append-opentelemetry"] }
+logforth = { version = "0.28", features = [
+    "layout-json",
+    "layout-text",
+    "bridge-log",
+    "diagnostic-fastrace",
+    "append-file",
+    "append-opentelemetry",
+] }
 logforth-append-opentelemetry = { version = "0.2.1" }
 matchit = "0.8.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
-insta = { version = "1.34.0", features = ["glob", "yaml", "filters" ] }
+insta = { version = "1.34.0", features = ["glob", "yaml", "filters"] }
 insta-cmd = "0.6.0"
 itertools = "0.14"
 json-patch = "3.0.1"
 nix = { version = "0.29", features = ["process", "signal"] }
-openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
+openai-api-rs = { version = "6.0.6", features = [
+    "rustls",
+], default-features = false }
 opentelemetry = { version = "0.31", features = ["trace", "logs", "metrics"] }
-opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "metrics", "grpc-tonic", "zstd-tonic" ] }
-opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "logs", "metrics"] }
+opentelemetry-otlp = { version = "0.31", features = [
+    "trace",
+    "logs",
+    "metrics",
+    "grpc-tonic",
+    "zstd-tonic",
+] }
+opentelemetry_sdk = { version = "0.31", features = [
+    "rt-tokio",
+    "trace",
+    "logs",
+    "metrics",
+] }
 opentelemetry-semantic-conventions = "0.31"
 pingora = { version = "0.6", features = ["proxy"] }
 pingora-core = "0.6"
@@ -48,19 +68,26 @@ pingora-http = "0.6"
 pingora-load-balancing = "0.6"
 pingora-proxy = "0.6"
 regex = "1.11.1"
-reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12", features = [
+    "json",
+    "rustls-tls",
+], default-features = false }
 reqwest-eventsource = "0.6"
 rustyline = "14.0"
 safer_owning_ref = "0.5.0"
 schemars = { version = "1.0", features = ["indexmap2", "url2", "chrono04"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
-serde_with = { version = "3.14", features = ["schemars_1"]}
+serde_with = { version = "3.14", features = ["schemars_1"] }
 serde_yaml_ng = "0.10.0"
 sha2 = "0.10"
 similar = "2.7.0"
-similar-asserts = { version = "1.7.0", features = ["serde" ] }
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "sqlite"] }
+similar-asserts = { version = "1.7.0", features = ["serde"] }
+sqlx = { version = "0.8", features = [
+    "runtime-tokio-rustls",
+    "uuid",
+    "sqlite",
+] }
 static_assertions = "1.1.0"
 stepflow-analysis = { path = "./crates/stepflow-analysis" }
 subst = { version = "0.3" }
@@ -80,17 +107,30 @@ tempfile = "3.8"
 test-with = { version = "0.14.10", features = ["runtime"] }
 testcontainers = "0.26.0"
 thiserror = "2.0.12"
-tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"]}
+tokio = { version = "1.44.1", features = [
+    "rt-multi-thread",
+    "macros",
+    "process",
+    "sync",
+    "io-util",
+    "time",
+] }
 tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "trace"] }
 trait-variant = "0.1.2"
-trie-rs = "0.4.2"
-url = { version = "2.5.4", features = ["serde"]}
-utoipa = { version = "5.3", features = ["axum_extras", "chrono", "indexmap", "rc_schema", "url", "uuid"] }
+url = { version = "2.5.4", features = ["serde"] }
+utoipa = { version = "5.3", features = [
+    "axum_extras",
+    "chrono",
+    "indexmap",
+    "rc_schema",
+    "url",
+    "uuid",
+] }
 utoipa-axum = "0.2"
 utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
-uuid = { version = "1.16.0", features = ["v7", "serde"]}
+uuid = { version = "1.16.0", features = ["v7", "serde"] }
 walkdir = "2.5.0"
 which = { version = "7.0.3", features = ["tracing"] }
 strum = { version = "0.26", features = ["derive"] }
