refactor: Simplify execution to use lazy step evaluation
Replace static dependency analysis with dynamic runtime evaluation.
Steps are now discovered lazily as expressions are evaluated, enabling
conditional execution paths like $if and $coalesce to skip unneeded work.

Key changes:

- Add dynamic dependency extraction to `ValueExpr` (`needed_steps`)
- Add inline resolution to `ValueExpr` (`resolve()`)
- Remove `ValueResolver` and `StateValueLoader`
- Move ExecutionTracker from analysis to execution crate
- Remove static dependency analysis from analysis crate.
  Delete dependency.rs, dependencies.rs, tracker.rs, types.rs
  Simplify reachable.rs to collect step references directly
- Remove WriteCache (tracker now caches results directly)
- Remove `skip` error action
- Delete test files using action: skip
- Regenerate JSON schemas

This closes #449 and #448.

--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -9,9 +9,6 @@ homepage.workspace = true
 repository.workspace = true
 publish = false
 
-[package.metadata.cargo-machete]
-ignored = ["safer_owning_ref"]
-
 [lints]
 workspace = true
 
@@ -19,7 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
-async-trait.workspace = true
+bit-set.workspace = true
 error-stack.workspace = true
 hex.workspace = true
 json-patch.workspace = true
@@ -33,9 +30,7 @@ stepflow-observability.workspace = true
 thiserror.workspace = true
 log.workspace = true
 utoipa.workspace = true
-uuid.workspace = true
 
 [dev-dependencies]
 insta.workspace = true
 similar-asserts.workspace = true
-tokio.workspace = true
