--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -75,10 +75,8 @@ reqwest = { version = "0.12", features = [
 reqwest-eventsource = "0.6"
 rustyline = "14.0"
 safer_owning_ref = "0.5.0"
-schemars = { version = "1.0", features = ["indexmap2", "url2", "chrono04"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
-serde_with = { version = "3.14", features = ["schemars_1"] }
 serde_yaml_ng = "0.10.0"
 sha2 = "0.10"
 similar = "2.7.0"
@@ -124,6 +122,7 @@ utoipa = { version = "5.3", features = [
     "axum_extras",
     "chrono",
     "indexmap",
+    "preserve_order",
     "rc_schema",
     "url",
     "uuid",
