--- a/stepflow-rs/crates/stepflow-builtins/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-builtins/Cargo.toml
@@ -19,8 +19,8 @@ doctest = false
 dynosaur.workspace = true
 error-stack.workspace = true
 openai-api-rs.workspace = true
-schemars.workspace = true
 serde.workspace = true
+utoipa.workspace = true
 serde_json.workspace = true
 serde_yaml_ng.workspace = true
 stepflow-plugin.workspace = true
