--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -20,12 +20,12 @@ indexmap.workspace = true
 libc = "0.2"
 reqwest.workspace = true
 reqwest-eventsource.workspace = true
-schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
 stepflow-plugin.workspace = true
 subst.workspace = true
+utoipa.workspace = true
 strum.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
