--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -77,6 +77,7 @@ rustyline = "14.0"
 safer_owning_ref = "0.5.0"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
+serde_with = "3.16"
 serde_yaml_ng = "0.10.0"
 sha2 = "0.10"
 similar = "2.7.0"
