feat: Add static type checking for workflows
Implements a type checking system for Stepflow workflows that can infer
and validate types statically without executing flows.

## New crate: stepflow-typecheck

- Type representation with Schema, Any, and Never types
- Type environment tracking input, variable, and step output schemas
- JSON Schema structural subtyping (width, depth, array covariance)
- Expression type synthesis for all ValueExpr variants
- Flow-level type checking with forward propagation
- Input schema inference from workflow $input references

## CLI: stepflow infer

New command that analyzes a workflow and outputs an annotated version
with inferred schemas:

    stepflow infer --flow=workflow.yaml
    stepflow infer --flow=workflow.yaml --output  # writes .inferred.yaml
    stepflow infer --flow=workflow.yaml --strict  # errors on untyped outputs

## Protocol: components/infer_schema

New protocol method allowing components to report output schemas based
on their input types. Python SDK and builtins implement this for
schema-aware type inference.

## Schema consolidation

FlowSchema now serializes as a valid JSON Schema with type definitions
under $defs and flow-specific schemas (input, output, variables, steps)
under properties. Uses custom Serialize/Deserialize for proper format.

Closes #438

--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -102,6 +102,7 @@ stepflow-protocol = { path = "./crates/stepflow-protocol" }
 stepflow-server = { path = "./crates/stepflow-server" }
 stepflow-state = { path = "./crates/stepflow-state" }
 stepflow-state-sql = { path = "./crates/stepflow-state-sql" }
+stepflow-typecheck = { path = "./crates/stepflow-typecheck" }
 tempfile = "3.8"
 test-with = { version = "0.14.10", features = ["runtime"] }
 testcontainers = "0.26.0"
