--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -19,11 +19,13 @@ doctest = false
 bit-set.workspace = true
 error-stack.workspace = true
 hex.workspace = true
+indexmap.workspace = true
 json-patch.workspace = true
 safer_owning_ref.workspace = true
 serde_json.workspace = true
 serde_yaml_ng.workspace = true
 serde.workspace = true
+serde_with.workspace = true
 sha2.workspace = true
 stepflow-observability.workspace = true
 thiserror.workspace = true
