--- a/stepflow-rs/crates/stepflow-builtins/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-builtins/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
+chrono.workspace = true
 dynosaur.workspace = true
 error-stack.workspace = true
 openai-api-rs.workspace = true
