--- a/tests/builtins/blob_test.yaml
+++ b/tests/builtins/blob_test.yaml
@@ -1,16 +1,23 @@
 schema: https://stepflow.org/schemas/v1/flow.json
-input_schema:
+name: Blob Storage Test
+description: Test workflow for blob storage operations
+schemas:
   type: object
   properties:
-    data:
+    input:
       type: object
-output_schema:
-  type: object
-  properties:
-    blob_id:
-      type: string
-    retrieved_data:
+      properties:
+        data:
+          type: object
+      required:
+        - data
+    output:
       type: object
+      properties:
+        blob_id:
+          type: string
+        retrieved_data:
+          type: object
 steps:
 - id: put_blob
   component: /builtin/put_blob
